[tool.poetry]
name = "test-mixed-project"
version = "0.1.0"
description = "Mixed pip+poetry project"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.4"
Django = "2.2.0"
flask = "2.2.5"

[project]
requires-python = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
